# yt

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  README.md  docker-compose.yml  eslint.config.js  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
api/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: root.tsx
app/routes/: home.tsx
src/: App.tsx  main.tsx
src/welcome/: welcome.tsx
web/: README.md  index.html  tsconfig.json  vite.config.ts
web/src/: App.tsx
